@@ -180,7 +180,7 @@ void KPCubicBezierCurveObject::flip(bool horizontal )
 
     KoPointArray tmpPoints;
     int index = 0;
-    if ( horizontal )
+    if ( ! horizontal )
     {
         KoPointArray::ConstIterator it;
         double horiz = getSize().height()/2;
