@@ -298,7 +298,7 @@ void KPLineObject::paint( QPainter* _painter, KoZoomHandler*_zoomHandler,
 void KPLineObject::flip( bool horizontal )
 {
     KPObject::flip( horizontal );
-    if ( horizontal )
+    if ( ! horizontal )
     {
         if ( lineType == LT_LU_RD )
             lineType = LT_LD_RU;
