@@ -271,7 +271,7 @@ void KPPieObject::paint( QPainter* _painter, KoZoomHandler*_zoomHandler,
 void KPPieObject::flip( bool horizontal )
 {
     KP2DObject::flip( horizontal );
-    if ( horizontal )
+    if ( ! horizontal )
     {
         p_angle = 360*16 - p_angle -p_len;
     }
