@@ -199,7 +199,7 @@ void KPPointObject::flip( bool horizontal )
 
     KoPointArray tmpPoints;
     int index = 0;
-    if ( horizontal )
+    if ( ! horizontal )
     {
         KoPointArray::ConstIterator it;
         double horiz = getSize().height()/2;
