@@ -178,7 +178,7 @@ void KPQuadricBezierCurveObject::flip( bool horizontal )
 
     KoPointArray tmpPoints;
     int index = 0;
-    if ( horizontal )
+    if ( ! horizontal )
     {
         KoPointArray::ConstIterator it;
         double horiz = getSize().height()/2;
